<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_background">

            <Button android:id="@+id/btnProfile"
                android:textColor="@drawable/label_foreground"
                android:layout_width="200dip"
                android:layout_height="35dip"
                android:textSize="12dip"
                android:text="@string/main_menu_profile_label"/>

            <Button android:id="@+id/btnCreateHailEstimate"
                android:textColor="@drawable/label_foreground"
                android:layout_width="200dip"
                android:layout_height="35dip"
                android:textSize="12dip"
                android:layout_below="@id/btnProfile"
                android:text="@string/main_menu_create_hail_estimate_label"/>

            <Button android:id="@+id/btnEstimates"
                android:textColor="@drawable/label_foreground"
                android:layout_width="200dip"
                android:layout_height="35dip"
                android:textSize="12dip"
                android:layout_below="@id/btnCreateHailEstimate"
                android:text="@string/main_menu_estimates_label"/>

            <Button android:id="@+id/btnInvoices"
                android:textColor="@drawable/label_foreground"
                android:layout_width="200dip"
                android:layout_height="35dip"
                android:textSize="12dip"
                android:layout_below="@id/btnEstimates"
                android:text="@string/main_menu_invoices_label"/>

    </RelativeLayout>

</ScrollView>