<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/registerUser"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

    <RelativeLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_background">


        <!--  Email Label -->
        <TextView android:id="@+id/registrationEmailLabel"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dip"
                  android:textColor="@drawable/label_foreground"
                  android:text="@string/registration_login_label"/>

        <EditText android:id="@+id/registrationUserName"
                  android:layout_width="200dip"
                  android:background="@drawable/backwithborder"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dip"
                  android:layout_marginBottom="20dip"
                  android:layout_marginLeft="10dip"
                  android:layout_below="@id/registrationEmailLabel"
                  android:singleLine="true"
                  android:inputType="text"/>

        <!--  Password Label -->
        <TextView android:id="@+id/registrationPasswordLabel"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dip"
                  android:textColor="@drawable/label_foreground"
                  android:layout_below="@id/registrationUserName"
                  android:text="@string/registration_password_label"/>

        <EditText android:id="@+id/registrationPassword"
                  android:layout_width="200dip"
                  android:background="@drawable/backwithborder"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="5dip"
                  android:layout_marginLeft="10dip"
                  android:singleLine="true"
                  android:layout_below="@id/registrationPasswordLabel"
                  android:password="true"
                  android:inputType="textPassword"/>

        <Button android:id="@+id/btnResetUsersPassword"
                android:textColor="@drawable/label_foreground"
                android:layout_width="150dip"
                android:layout_height="35dip"
                android:layout_marginLeft="220dip"
                android:layout_below="@id/registrationPasswordLabel"
                android:textSize="12dip"
                android:text="@string/registration_reset_password_label"/>

        <!--  Error message -->
        <TextView android:id="@+id/registration_error"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#e30000"
                  android:padding="10dip"
                  android:layout_marginLeft="10dip"
                  android:layout_below="@id/registrationPassword"
                  android:textStyle="bold"/>

        <!-- Login button -->
        <Button android:id="@+id/btnRegistration"
                android:textColor="@drawable/label_foreground"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="10dip"
                android:layout_below="@id/registration_error"
                android:text="@string/registration_submit_label"/>

        <Button android:id="@+id/btnDeactivateUser"
                android:textColor="@drawable/label_foreground"
                android:layout_width="150dip"
                android:layout_height="35dip"
                android:layout_marginLeft="220dip"
                android:layout_below="@id/registrationEmailLabel"
                android:textSize="12dip"
                android:text="@string/registration_deactivate_label"/>

        <Button android:id="@+id/btnReactivateUser"
                android:textColor="@drawable/label_foreground"
                android:layout_width="150dip"
                android:layout_height="35dip"
                android:layout_marginLeft="370dip"
                android:layout_below="@id/registrationEmailLabel"
                android:textSize="12dip"
                android:text="@string/registration_reactivate_label"/>

        <Button android:id="@+id/btnRequestNewUser"
                android:layout_below="@id/btnRegistration"
                android:layout_alignParentLeft="true"
                android:textColor="@drawable/label_foreground"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/registration_view_requests_label"/>

        <rmg.pdrtracker.login.RequestsForNewUser.RequestsForNewUsersPanel
                android:id="@+id/requests_for_new_user_panel"
                android:layout_width="1000dip"
                android:layout_height="800dip"
                android:orientation="horizontal"
                android:background="@drawable/black"
                android:visibility="invisible"/>




        <!-- Login Form Ends -->
    </RelativeLayout>
</ScrollView>