<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/panel_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="10"
        android:isScrollContainer="true"
        android:background="@drawable/label_background">


        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/job_name_label"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/job_name"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:inputType="text"
            android:layout_column="1"
            android:layout_row="0"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/estimator_name_label"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/estimator_name"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:inputType="text"
            android:layout_column="1"
            android:layout_row="1"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/insurance_label"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/insurance_name"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:inputType="text"
            android:layout_column="1"
            android:layout_row="2"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/claim_number_label"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/claim_number"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:inputType="text"
            android:layout_column="1"
            android:layout_row="3"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/customer_name_label"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/customer_name"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:inputType="text"
            android:layout_column="1"
            android:layout_row="4"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/customer_phone_label"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/customer_phone"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:inputType="phone"
            android:layout_column="1"
            android:layout_row="5"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/job_date_label"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/job_date"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:layout_column="1"
            android:layout_row="6"/>

        <Space
            android:background="@drawable/label_background"
            android:layout_width="40dip"
            android:layout_height="wrap_content"
            android:layout_rowSpan="8"
            android:layout_column="2"
            android:layout_row="0"/>

        <Space
            android:background="@drawable/label_background"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_columnSpan="5"
            android:layout_column="0"
            android:layout_row="7"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/vehicle_heading_label"
            android:layout_column="3"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/vin_label"
            android:layout_column="3"
            android:layout_row="1"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/vin"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:inputType="text"
            android:layout_column="4"
            android:layout_row="1"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/vehicle_year_label"
            android:layout_column="3"
            android:layout_row="2"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/vehicle_year"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:inputType="text"
            android:layout_column="4"
            android:layout_row="2"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/vehicle_make_label"
            android:layout_column="3"
            android:layout_row="3"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/vehicle_make"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:inputType="text"
            android:layout_column="4"
            android:layout_row="3"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/vehicle_model_label"
            android:layout_column="3"
            android:layout_row="4"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/vehicle_model"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:inputType="text"
            android:layout_column="4"
            android:layout_row="4"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/vehicle_color_label"
            android:layout_column="3"
            android:layout_row="5"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/vehicle_color"
            android:background="@drawable/backwithborder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:layout_margin="2dp"
            android:inputType="text"
            android:layout_column="4"
            android:layout_row="5"/>

        <TextView
            android:background="@drawable/label_background"
            android:textColor="@drawable/label_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/job_description_label"
            android:layout_columnSpan="5"
            android:layout_column="0"
            android:layout_row="8"/>

        <EditText
            android:id="@+id/job_description"
            android:background="@drawable/backwithborder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:paddingLeft="10dp"
            android:inputType="textMultiLine"
            android:layout_columnSpan="5"
            android:layout_column="0"
            android:layout_row="9"
            android:gravity="top"
            android:lines="4"
            android:maxLines="4"
            android:singleLine="false"
            android:scrollbars="vertical"
            android:layout_margin="2dp"
            android:layout_gravity="fill_horizontal"/>
    </GridLayout>

</ScrollView>

