<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_background">


            <!--  Email Label -->
            <TextView android:id="@+id/loginEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/label_foreground"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="20dip"
                android:layout_alignParentLeft="true"
                android:text="@string/login_email_label"/>

            <EditText android:id="@+id/loginEmail"
                android:layout_width="200dip"
                android:background="@drawable/backwithborder"
                android:layout_below="@id/loginEmailLabel"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="10dip"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>

            <!--  Password Label -->
            <TextView android:id="@+id/loginPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginEmail"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:textColor="@drawable/label_foreground"
                android:text="@string/login_password_label"/>

            <EditText android:id="@+id/loginPassword"
                android:layout_below="@id/loginPasswordLabel"
                android:layout_alignParentLeft="true"
                android:layout_width="200dip"
                android:background="@drawable/backwithborder"
                android:layout_marginLeft="10dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:password="true"
                android:inputType="textPassword"/>

            <Button android:id="@+id/btnChangePassword"
                android:textColor="@drawable/label_foreground"
                android:layout_width="200dip"
                android:layout_height="35dip"
                android:textSize="12dip"
                android:layout_marginLeft="220dp"
                android:layout_below="@+id/loginPasswordLabel"
                android:text="@string/login_change_password_label"/>

            <!--  Error message -->
            <TextView android:id="@+id/login_error"
                android:layout_below="@id/loginPassword"
                android:layout_alignParentLeft="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:textColor="#e30000"
                android:padding="10dip"
                android:textStyle="bold"/>

            <!-- Login button -->
            <Button android:id="@+id/btnLogin"
                 android:layout_below="@id/login_error"
                 android:layout_alignParentLeft="true"
                 android:textColor="@drawable/label_foreground"
                 android:layout_width="200dip"
                 android:layout_marginLeft="10dip"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dip"
                 android:text="@string/login_login_label"/>

            <Button android:id="@+id/btnRequestNewUser"
                android:layout_below="@id/btnLogin"
                android:layout_alignParentLeft="true"
                android:textColor="@drawable/label_foreground"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/login_signup_label"/>

            <rmg.pdrtracker.login.requestNewUser.RequestNewUserPanel
                android:id="@+id/request_new_user_panel"
                android:layout_width="1000dip"
                android:layout_height="800dip"
                android:orientation="horizontal"
                android:background="@drawable/black"
                android:visibility="invisible"/>

            <rmg.pdrtracker.login.loginUser.changePassword.ChangePasswordPanel
                android:id="@+id/change_password_panel"
                android:layout_width="1000dip"
                android:layout_height="800dip"
                android:orientation="horizontal"
                android:background="@drawable/black"
                android:visibility="invisible"/>

        <!-- Login Form Ends -->
    </RelativeLayout>

</ScrollView>